--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <div id="preloader">
-        <img src="/images/dplogo.gif" alt="loading...">
+        <img src="./images/dplogo.gif" alt="loading...">
       </div>
 
 
