--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ if (finalCalculatedCostformonth) {
     }
   </script>
 
-<script src="/scripts/preloder.js"></script>
+<script src="./scripts/preloder.js"></script>
 
 
 
