--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Restorent Bill</title>
     <link rel="shortcut icon" href="./images/logoicon.png">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <script src="scripts/navbarscript.js"></script>
-    <link rel="stylesheet" href="styles/mainstyle.css">
+    <link rel="stylesheet" href="./styles/mainstyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
@@ -25,8 +25,8 @@
 
         <nav class="navbar">
             <ul class="navbar-list">
-                <li><a class="navbar-link" href="index.html">Home</a></li>
-                <li><a class="navbar-link" href="/html/order.html">take Order</a></li>
+                <li><a class="navbar-link" href="/index.html">Home</a></li>
+                <li><a class="navbar-link" href="./html/order.html">take Order</a></li>
                 <li><a class="navbar-link" href="#">Services</a></li>
                 <li><a class="navbar-link" href="#">Profile</a></li>
                 <li><a class="navbar-link" href="#">setting</a></li>
@@ -61,7 +61,7 @@
             <h1>Restorent bill maker</h1>
         </div>
         <div class="restorent_logo">
-            <img src="/images/restorent_logo.jpg" alt="">
+            <img src="./images/restorent_logo.jpg" alt="">
             <p>Restorent name <br>ABC nagar, Belgaum, 590010 <br> Karnataka, india</p>
         </div>
         <div class="main_container">
@@ -104,7 +104,7 @@
             </div>
             <div class="take_order_box" onclick="redirectToOrderPage()">
                 <span class="txt_background_order">Take Order</span>
-                <img src="/images/restorent_logo.jpg" alt="" srcset="">
+                <img src="./images/restorent_logo.jpg" alt="" srcset="">
 
             </div>
         </div>
@@ -119,9 +119,9 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="index.js"></script>
-    <script src="/scripts/time.js"></script>
-    <script src="/scripts/date.js"></script>
-    <script src="/scripts/darkmode.js"></script>
+    <script src="./scripts/time.js"></script>
+    <script src="./scripts/date.js"></script>
+    <script src="./scripts/darkmode.js"></script>
     <!-- <script src="/scripts/Bill_Genrate.js"></script> -->
 
 
