--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <nav class="navbar">
             <ul class="navbar-list">
-                <li><a class="navbar-link" href="/index.html">Home</a></li>
+                <li><a class="navbar-link" href="index.html">Home</a></li>
                 <li><a class="navbar-link" href="./html/order.html">take Order</a></li>
                 <li><a class="navbar-link" href="#">Services</a></li>
                 <li><a class="navbar-link" href="#">Profile</a></li>
