--- a/html/order.html
+++ b/html/order.html
@@ -72,7 +72,7 @@
 
     
     <header class="header">
-        <img src="/images/DPLogo1.gif" alt="" class="logo" />
+        <img src="../images/DPLogo1.gif" alt="" class="logo" />
 
         <nav class="navbar">
             <ul class="navbar-list">
