--- a/html/order.html
+++ b/html/order.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="/images/logoicon.png">
     <title>Take order</title>
     <script src="scripts/navbarscript.js"></script>
-    <link rel="stylesheet" href="../styles/order_style.css">
+    <link rel="stylesheet" href="/styles/order_style.css">
     <link rel="stylesheet" href="../styles/order.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
