--- a/html/order.html
+++ b/html/order.html
@@ -381,7 +381,7 @@
     <script src="../index.js"></script>
     <script src="../scripts/darkmode.js"></script>
     <script src="../scripts/counter.js"></script>
-    <script src="/scripts/Bill_Genrate.js"></script>    
+    <script src="../scripts/Bill_Genrate.js"></script>    
     <script src="../scripts/time.js"></script>
     <script src="../scripts/finalcost.js"></script>        
     <script src="../scripts/date.js"></script>    
