--- a/html/order.html
+++ b/html/order.html
@@ -364,9 +364,9 @@
     <script src="../index.js"></script>
     <script src="../scripts/darkmode.js"></script>
     <script src="../scripts/counter.js"></script>
-    <script src="/scripts/Bill_Genrate.js"></script>    
+    <script src="../scripts/Bill_Genrate.js"></script>    
     <script src="../scripts/time.js"></script>
-    <script src="/scripts/finalcost.js"></script>        
+    <script src="../scripts/finalcost.js"></script>        
     <script src="../scripts/date.js"></script>    
     <script>
         var darkmode = document.getElementById("dark_mode");
