--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <section class="section-main">
         <div class="heading">
-            <h1>Restorent bill maker</h1>
+            <h1>Restaurant bill maker</h1>
         </div>
         <div class="restorent_logo">
             <img src="./images/restorent_logo.jpg" alt="">
