--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="restorent_logo">
             <img src="./images/restorent_logo.jpg" alt="">
-            <p>Restorent name <br>ABC nagar, Belgaum, 590010 <br> Karnataka, india</p>
+            <p>Restaurant name <br>ABC nagar, Belgaum, 590010 <br> Karnataka, india</p>
         </div>
         <div class="main_container">
 
