--- a/html/order.html
+++ b/html/order.html
@@ -109,7 +109,7 @@
 
     <section class="food_items">
         <div class="heading">
-            <h1>restorent bill maker</h1>
+            <h1>Restaurant bill maker</h1>
            
         </div>
 
