--- a/html/order.html
+++ b/html/order.html
@@ -309,7 +309,7 @@
 
     <section  class="submission">
         <h1>
-            Restorent Name
+            Restaurant Name
         </h1>
         <div class="resorent_logo">
             
